kubernetes/apps/networking/traefik/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) # && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: basicauth
        # - name: crowdsec-traefik-bouncer
        - name: error-pages
        - name: ipfilter-internal
      services:
        - name: api@internal
          kind: TraefikService
        # - name: traefik
        #   namespace: networking
        #   port: 9000
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-metrics
#   namespace: networking
# spec:
#   entryPoints:
#     - metrics
#   routes:
#     - match: Host(`traefik.${SECRET_DOMAIN}`) # && PathPrefix(`/metrics`)
#       kind: Rule
#       # Enable auth middleware
#       middlewares:
#         # - name: basicauth
#         # - name: crowdsec-traefik-bouncer
#         # - name: error-pages
#         - name: ipfilter-internal
#       services:
#         - name: prometheus@internal
#           kind: TraefikService
#   # Use the secret generated by cert-manager
#   tls:
#     secretName: "${SECRET_DOMAIN/./-}-tls"
#     # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
